@@ -6,6 +6,7 @@ Cacti CHANGELOG
 -issue#4892: Recache Loop after many devices go offline
 -issue#4893: in cacti 1.2.22 real time counter gets stuck and does not count down
 -issue#4903: MySQL 8.x regular expressions break Cacti Automation
+-issue#4904: The Recommendation for innodb_buffer_pool_instances is incorrect for MySQL 8 and MariaDB < 10.5
 -feature#3131: Button to reindex bad indexes
 -feature#4841: Move the cactid function db_check_reconnect() to lib/database.php for other service oriented scripts
 -feature#4874: Add support for showing business hours
